--- a/nbs/syke.scss
+++ b/nbs/syke.scss
@@ -1,19 +1,29 @@
 /*-- scss:defaults --*/
 
+$theme: "syke" !default;
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 
-// fonts
-$font-family-sans-serif: "Poppins", sans-serif !default;
-//$presentation-heading-font: "Poppins", sans-serif !default;
-$title-font-size: 80px;
-
-//colors
-// brand colors
+// Color system
+// Main colors
+$white: #fff !default;
 $syke-darkgreen: #005854 !default;
 $syke-green: #84C497 !default;
 $syke-red: #F28E77 !default;
 $syke-blue: #64C1CB !default;
 $syke-gray: #E4E3DE !default;
+$black: #000 !default;
+
+// Additional colors
+
+$syke-lightgreen: #C7E3D2 !default;
+$syke-lightred: #FCD9C9 !default;
+$syke-darkred: #B34733 !default;
+$syke-lightblue: #CFE9EA !default;
+$syke-darkblue: #006085 !default;
+$syke-lightyellow: #FED992 !default;
+$syke-darkgray: #575756 !default;
+$syke-ocra: #BB5B0F !default;
 
 //$body-bg: $vesi-dark !default;
 $body-color: $syke-darkgreen !default;
@@ -23,12 +33,25 @@ $selection-bg: $syke-red !default;
 $border-color: $text-muted !default;
 $code-block-border-color: $text-muted !default;
 
-//headings
-//$presentation-heading-color: $syke-darkgreen !default;
-$presentation-heading-font-weight: 600;
+$primary:   $syke-darkgreen !default;
 
+// Options
+
+$enable-rounded: false !default;
+
+// Body
+
+$body-color: $syke-darkgreen !default;
+
+// Fonts
+$font-family-sans-serif: "Poppins", sans-serif !default;
+$headings-font-weight: 400 !default;
+
+
+//havbar
 
 /*-- scss:rules --*/
+
 
 //logo
 .reveal .slide-logo {
