--- a/nbs/syke.scss
+++ b/nbs/syke.scss
@@ -33,16 +33,16 @@ $selection-bg: $syke-red !default;
 $border-color: $text-muted !default;
 $code-block-border-color: $text-muted !default;
 
-$primary:       $syke-darkgreen !default;
-$secondary:     $syke-green !default;
-$success:       $syke-blue !default;
-$info:          $syke-red !default;
-$warning:       $syke-lightred !default;
-$danger:        $syke-darkred !default;
-$light:         $syke-gray !default;
-$dark:          $syke-darkgray !default;
+$primary: $syke-darkgreen !default;
+$secondary: $syke-green !default;
+$success: $syke-blue !default;
+$info: $syke-red !default;
+$warning: $syke-lightred !default;
+$danger: $syke-darkred !default;
+$light: $syke-gray !default;
+$dark: $syke-darkgray !default;
 
-$min-contrast-ratio:    1.36 !default;
+$min-contrast-ratio: 1.36 !default;
 
 // Options
 
@@ -64,147 +64,88 @@ $table-border-color: $primary !default;
 $font-family-sans-serif: "Poppins", sans-serif !default;
 
 
-//havbar
-
 /*-- scss:rules --*/
 
 
 // Buttons
 
-.btn {
-    &:focus,
-    &:active,
-    &:active:focus,
-    &.active:focus {
-      outline: none;
-    }
-  
-    &-secondary {
-      background-color: $white;
-      border-color: #ccc;
-      color: $gray-900;
-  
-      &:hover {
-        background-color: $gray-300;
-        border-color: $gray-500;
-        color: $gray-900;
-      }
-  
-      &.disabled {
-        background-color: $white;
-        border-color: tint-color(#ccc, 5%);
-        color: tint-color($gray-900, 5%);
-      }
-    }
-  
-    &-warning {
-      color: $white;
-    }
-  
-    &-primary:focus {
-      box-shadow: 0 0 5px tint-color($primary, 10%);
-    }
-  
-    &-secondary:focus {
-      box-shadow: 0 0 5px $gray-400;
-    }
-  
-    &-success:focus {
-      box-shadow: 0 0 5px tint-color($success, 10%);
-    }
-  
-    &-info:focus {
-      box-shadow: 0 0 5px tint-color($info, 10%);
-    }
-  
-    &-warning:focus {
-      box-shadow: 0 0 5px tint-color($warning, 10%);
-    }
-  
-    &-danger:focus {
-      box-shadow: 0 0 5px tint-color($danger, 10%);
-    }
-  
-    &.disabled:focus {
-      box-shadow: none;
-    }
-  }
-  
-  // Tables
-  
-  .table .thead-dark th {
+// Tables
+
+.table .thead-dark th {
     background-color: $secondary;
     border-color: $table-border-color;
-  }
-  
-  // Forms
-  
-  .form-control:focus {
-    box-shadow: 0 0 5px rgba(100, 65, 164, .4);
-  }
-  
-  // Navs
-  
-  .nav-tabs {
+}
+
+// Blockquotes
+
+.blockquote {
+    background-color: $primary
+    body-color: $white
+}
+
+
+// Forms
+
+
+// Navs
+
+.nav-tabs {
+
     .nav-link,
-    .nav-link.active, {
-      border-width: 0 0 1px;
-    }
-  
-    .nav-link:hover,
     .nav-link.active,
-    .nav-link.active:hover,
-    .nav-link.active:focus {
-      border-bottom: 1px solid $primary;
-    }
-  
-    .nav-item + .nav-item {
-      margin-left: 0;
-    }
-  }
-  
-  .breadcrumb {
-    &-item.active {
-      color: $gray-700;
-    }
-  }
-  
-  // Indicators
-  
-  .badge {
+    {
+    border-width: 0 0 1px;
+}
+
+.nav-link:hover,
+.nav-link.active,
+.nav-link.active:hover,
+.nav-link.active:focus {
+    border-bottom: 1px solid $primary;
+}
+
+.nav-item+.nav-item {
+    margin-left: 0;
+}
+}
+
+
+// Indicators
+
+.badge {
     &.bg-light {
-      color: $dark;
+        color: $dark;
     }
-  }
-  
-  // Progress bars
-  
-  .progress {
+}
+
+// Progress bars
+
+.progress {
     height: 8px;
-  }
-  
-  // Containers
-  
-  .list-group {
+}
+
+// Containers
+
+.list-group {
     &-item {
-      color: rgba(255, 255, 255, .8);
-  
-      &.active,
-      &:hover,
-      &:focus {
-        color: $white;
-      }
-  
-      &.active {
-        font-weight: 700;
-  
-        &:hover {
-          background-color: $list-group-hover-bg;
+        color: rgba(255, 255, 255, .8);
+
+        &.active,
+        &:hover,
+        &:focus {
+            color: $white;
         }
-      }
-  
-      &.disabled:hover {
-        color: $list-group-disabled-color;
-      }
+
+        &.active {
+            font-weight: 700;
+
+            &:hover {
+                background-color: $list-group-hover-bg;
+            }
+        }
+
+        &.disabled:hover {
+            color: $list-group-disabled-color;
+        }
     }
-  }
+}
