--- a/nbs/syke.scss
+++ b/nbs/syke.scss
@@ -79,8 +79,8 @@ $font-family-sans-serif: "Poppins", sans-serif !default;
 // Blockquotes
 
 .blockquote {
-    background-color: $primary
-    body-color: $white
+    background-color: $primary;
+    color: $white;
 }
 
 
