--- a/nbs/syke.scss
+++ b/nbs/syke.scss
@@ -25,7 +25,6 @@ $syke-lightyellow: #FED992 !default;
 $syke-darkgray: #575756 !default;
 $syke-ocra: #BB5B0F !default;
 
-//$body-bg: $vesi-dark !default;
 $body-color: $syke-darkgreen !default;
 $link-color: $syke-red !default;
 $text-muted: darken($syke-gray, 20%) !default;
@@ -63,6 +62,16 @@ $table-border-color: $primary !default;
 // Fonts
 $font-family-sans-serif: "Poppins", sans-serif !default;
 
+// Sidebar
+
+$sidebar-fg: $primary;
+$sidebar-hl: $secondary;
+
+// TOC
+
+$toc-color: $primary;
+$toc-active-border: $syke-red;
+
 
 /*-- scss:rules --*/
 
@@ -84,13 +93,18 @@ $font-family-sans-serif: "Poppins", sans-serif !default;
 }
 
 
+// Numbered headers
+
+.header-section-number {
+    color: $secondary;
+}
+
 // Forms
 
 
 // Navs
 
 .nav-tabs {
-
     .nav-link,
     .nav-link.active,
     {
